
2019-06-07  Ron Norman <rjn@inglenet.com>

	* fileio.c: If DB_HOME is not defined, then default to "."
	            If DB_HOME is 'no' or 'false' then disable record/file
		    locking

2019-06-05  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c (cob_file_close, cob_file_unlock) [!HAVE_FCNTL]: fixed
	  missing check for fcntl availability

2019-04-14  Ron Norman <rjn@inglenet.com>

	* screenio.c: define ALT_DEL, ALT_LEFT, ALT_RIGHT
	  using \033 for Escape instead of \E to avoid C compiler problems
	* fileio.c: Fix RELATIVE file I/O bug for use on big-endian system

2019-03-12  Simon Sobisch <simonsobisch@gnu.org>

	* common.c (print_info): changed msgid for "file handler" and output
	  if RTD-version of VB-ISAM is used, partially after Ron Norman

2015-03-03  Ron Norman

	* fileio.c, common.c, common.h updated to resolve little endian
	  versus big endian issues

2019-02-26  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: define COB_EXT_EXPORT / COB_EXT_IMPORT

2019-01-29  Simon Sobisch <simonsobisch@gnu.org>

	* common.c, termio.c, coblocal.h: added COB_DISPLAY_PUNCH_FILE
	* common.c (cob_set_runtime_option, cob_get_runtime_option),
	  common.h (cob_runtime_option_switch):
	  added COB_SET_RUNTIME_DISPLAY_PUNCH_FILE

2019-01-27  Simon Sobisch <simonsobisch@gnu.org>

	* common.c, mlio.c, screenio.c: fixed compiler warnings
	* common.c (print_info): fixed issues if curses is not available,
	  introduced 2019-01-22

2019-01-22  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c (cob_screen_init): fix background=foreground from terminal
	* screenio.c (cob_screen_init, cob_screen_attr): explicit define and use
	  color_pair 1 as "black on black"
	* screenio.c (cob_screen_attr): fix long standing bug in use of
	  color_set (takes color_pair_number, not a COLOR_PAIR)
	* screenio.c (cob_screen_attr): extracted (cob_to_curses_color,
	  cob_get_color_pair, cob_activate_color_pair)
	* screenio.c: fix compiler warnings and correctly use chtype